# eigen

./: Cargo.toml  README.md  dist-workspace.toml
.github/workflows/: website.yml
src/: lib.rs  main.rs
src/config/: mod.rs
src/data/: fetcher.rs  query.rs
src/dev/: rebuild.rs  server.rs
src/discovery/: mod.rs
src/plugins/: mod.rs  registry.rs  strapi.rs
src/template/: environment.rs  errors.rs  filters.rs  functions.rs  mod.rs
tests/: integration_test.rs
website/: index.html
