[package]
name = "eigen"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
axum-htmx = "0.8.1"
chrono = "0.4"
clap = { version = "4", features = ["derive"] }
color-eyre = "0.6"
eyre = "0.6.12"
futures = "0.3"
http = "1"
http-body-util = "0.1"
hyper = { version = "1", features = ["client", "http1"] }
hyper-util = { version = "0.1", features = ["tokio", "client-legacy", "http1"] }
mediatype = "0.21.0"
mime = "0.3.17"
minijinja = { version = "2.15.1", features = ["loader", "debug"] }
notify = "8"
pulldown-cmark = "0.13"
regex = "1"
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
serde_yaml = "0.9"
slug = "0.1"
tokio = { version = "1.49.0", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
toml = "0.8"
tower-http = { version = "0.6", features = ["fs", "set-header"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
walkdir = "2.5.0"

[dev-dependencies]
tempfile = "3"
